--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,34 +14,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-
+  http: ^0.13.5
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-
   flutter_lints: ^2.0.0
 
 
 
 flutter:
-
-
   uses-material-design: true
-
-
-
-  fonts:
-    - family: SourceSansPro
-      fonts:
-        - asset: fonts/SourceSansPro-SemiBold.ttf
-        - asset: fonts/SourceSansPro-Light.ttf
-        - asset: fonts/SourceSansPro-Regular.ttf
-
   assets:
   - assets/images/
 
