--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,7 +1,4 @@
 {
-    // Используйте IntelliSense, чтобы узнать о возможных атрибутах.
-    // Наведите указатель мыши, чтобы просмотреть описания существующих атрибутов.
-    // Для получения дополнительной информации посетите: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
@@ -10,5 +7,17 @@
             "type": "dart",
             "deviceId": "75F03C7F-7C30-48B3-9401-4335A71BAA4B",
         },
+        {
+            "name": "Google Pixel 3a",
+            "request": "launch",
+            "type": "dart",
+            "deviceId": "emulator-5554"
+        },
+    ],
+    "compounds": [
+        {
+          "name": "All Devices",
+          "configurations": [ "Iphone 13 Pro", "Google Pixel 3a"]
+        }
     ]
 }
