--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   http: ^0.13.5
   intl: ^0.17.0
   cupertino_icons: ^1.0.2
+  flutter_bloc: ^8.1.1
+  bloc: ^8.1.0
 
 dev_dependencies:
   flutter_test:
@@ -28,5 +30,8 @@ flutter:
   uses-material-design: true
   assets:
   - assets/images/
+ 
+
+ 
 
         
