--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.1
   bloc: ^8.1.0
+  cached_network_image: ^3.2.2
 
 dev_dependencies:
   flutter_test:
