--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,11 @@ dependencies:
   http: ^0.13.5
   intl: ^0.17.0
   cupertino_icons: ^1.0.2
-  flutter_bloc: ^8.1.1
-  bloc: ^8.1.0
   cached_network_image: ^3.2.2
   provider: ^6.0.3
   introduction_screen: ^3.0.2
+  flutter_spinkit: ^5.1.0
+  
 
 dev_dependencies:
   flutter_test:
